# mode-client

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: bump.yml  publish.yml  test.yml
mode_analytics/: __init__.py  _client.py
mode_client/: __init__.py  _client.py  _models.py  clients.py  mode_client.py  models.py
mode_client/clients/: __init__.py  mode_base_client.py  mode_collection_client.py  mode_query_client.py  mode_query_run_client.py  mode_report_client.py  mode_report_run_client.py
tests/: test_clients.py  test_clients_integration.py  test_clients_unit.py  test_mode_analytics.py  test_mode_client.py
