[tool.poetry]
name = "mode-client"
version = "1.2.2"
description = "A typed Python client for the Mode API"
authors = ["Kshitij Aranke <kshitij@aranke.org>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/k-aranke/mode-client"
repository = "https://github.com/k-aranke/mode-client"

[tool.poetry.urls]
Changelog = "https://github.com/k-aranke/mode-client/releases"

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.9"
httpx = "^0.23"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
pytest-cov = "^3.0"
python-dotenv = "^0.20"
mypy = "^0.971"


[tool.commitizen]
name = "cz_conventional_commits"
version = "1.2.2"
version_files = ["pyproject.toml:version"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
